--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
      <title>dharm home page</title>
      <meta http-equiv="Content-Type" Content="text/html"; charset="UTF-8" />
-     <link  type="text/css" rel="stylesheet" href="/home/zemoso/dharm_home_page/stylesheet1.css"/> 
+     <link  type="text/css" rel="stylesheet" href="stylesheet1.css"/> 
   </head>
   <body>
       <div Id="maincontainer">
            <div Id="header">
-               <a href=""><img src="/home/zemoso/dharm_home_page/images/trolltunga.jpg" Id="headerpic"/></a>
+               <a href=""><img src="trolltunga.jpg" Id="headerpic"/></a>
            </div>
            <nav Id="horizontalnav">
                <ul>
