--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
            </div>
            <nav Id="horizontalnav">
                <ul>
-           	     <li><a href="/home/zemoso/dharm_home_page/first.html">home</a></li>
-           	     <li><a href="/home/zemoso/dharm_home_page/aboutme.html">About me</a></li>
-           	     <li><a href="/home/zemoso/dharm_home_page/contactme.html">Contact Me</a></li>
-           	     <li><a href="/home/zemoso/dharm_home_page/mygallery.html">My Gallary me</a></li>
+           	     <li><a href="index.html">home</a></li>
+           	     <li><a href="aboutme.html">About me</a></li>
+           	     <li><a href="contactme.html">Contact Me</a></li>
+           	     <li><a href="mygallery.html">My Gallary me</a></li>
                  </ul>        	     
            </nav>
 
@@ -24,8 +24,8 @@
                  <form>
                     <select id="list">
                        <option value="#">dropdown list</option>
-                       <option><a href="/home/zemoso/dharm_home_page/first.html">home</a></option>
-                       <option><a href="/home/zemoso/dharm_home_page/aboutme.html">About me</a></option>
+                       <option><a href="index.html">home</a></option>
+                       <option><a href="aboutme.html">About me</a></option>
                        <option value="#">first element to select</option>
                        <option value="#">second element to select</option> 
                     </select>
