--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
      <title>dharm home page</title>
      <meta http-equiv="Content-Type" Content="text/html"; charset="UTF-8" />
-     <link  type="text/css" rel="stylesheet" href="stylesheet1.css"/> 
+     <link  type="text/css" rel="stylesheet" href="https://github.com/dharm033075/dharm033075.github.io/blob/master/stylesheet1.css"/> 
   </head>
   <body>
       <div Id="maincontainer">
@@ -12,10 +12,10 @@
            </div>
            <nav Id="horizontalnav">
                <ul>
-           	     <li><a href="index.html">home</a></li>
-           	     <li><a href="aboutme.html">About me</a></li>
-           	     <li><a href="contactme.html">Contact Me</a></li>
-           	     <li><a href="mygallery.html">My Gallary me</a></li>
+           	     <li><a href="https://github.com/dharm033075/dharm033075.github.io/edit/master/index.html">home</a></li>
+           	     <li><a href="https://github.com/dharm033075/dharm033075.github.io/blob/master/aboutme.html">About me</a></li>
+           	     <li><a href="https://github.com/dharm033075/dharm033075.github.io/blob/master/contactme.html">Contact Me</a></li>
+           	     <li><a href="https://github.com/dharm033075/dharm033075.github.io/blob/master/mygallery.html">My Gallary me</a></li>
                  </ul>        	     
            </nav>
 
