--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
      <title>dharm home page</title>
      <meta http-equiv="Content-Type" Content="text/html"; charset="UTF-8" />
-     <link  type="text/css" rel="stylesheet" href="stylesheet1.css"/> 
+     <link  type="text/css" rel="stylesheet" href="https://rawgit.com/dharm033075/dharm033075.github.io/master/stylesheet1.css"/> 
   </head>
   <body>
       <div Id="maincontainer">
