--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <nav Id="horizontalnav">
                <ul>
            	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/index.html">home</a></li>
-           	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/aboutme.html">About me</a></li>
+           	     <li><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/5301273b/aboutme.html">About me</a></li>
            	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/contactme.html">Contact Me</a></li>
            	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/mygallery.html">My Gallary me</a></li>
                  </ul>        	     
