--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                <ul>
            	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/index.html">home</a></li>
            	     <li><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/5301273b/aboutme.html">About me</a></li>
-           	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/contactme.html">Contact Me</a></li>
-           	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/mygallery.html">My Gallary me</a></li>
+           	     <li><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/475f703b/contactme.html">Contact Me</a></li>
+           	     <li><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/475f703b/mygallery.html">My Gallary me</a></li>
                  </ul>        	     
            </nav>
 
@@ -25,7 +25,7 @@
                     <select id="list">
                        <option value="#">dropdown list</option>
                        <option><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/index.html">home</a></option>
-                       <option><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/aboutme.html">About me</a></option>
+                       <option><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/5301273b/aboutme.html">About me</a></option>
                        <option value="#">first element to select</option>
                        <option value="#">second element to select</option> 
                     </select>
