--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/index.html">home</a></li>
            	     <li><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/5301273b/aboutme.html">About me</a></li>
            	     <li><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/475f703b/contactme.html">Contact Me</a></li>
-           	     <li><a href="https://cdn.rawgit.com/dharm033075/dharm033075.github.io/475f703b/mygallery.html">My Gallary me</a></li>
+           	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/mygallery.html">My Gallary me</a></li>
                  </ul>        	     
            </nav>
 
