--- a/contactme.html
+++ b/contactme.html
@@ -16,10 +16,10 @@
            
            <nav Id="horizontalnav">
                <ul>
-           	     <li><a href="/home/zemoso/dharm_home_page/first.html">home</a></li>
-           	     <li><a href="/home/zemoso/dharm_home_page/aboutme.html">About me</a></li>
-           	     <li><a href="/home/zemoso/dharm_home_page/contactme.html">Contact Me</a></li>
-           	     <li><a href="/home/zemoso/dharm_home_page/mygallery.html">My Gallary me</a></li>        	     
+                     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/index.html">home</a></li>
+           	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/aboutme.html">About me</a></li>
+           	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/contactme.html">Contact Me</a></li>
+           	     <li><a href="https://rawgit.com/dharm033075/dharm033075.github.io/master/mygallery.html">My Gallary me</a></li>      	     
                </ul>
            </nav>
            
